--- a/src/style.css
+++ b/src/style.css
@@ -412,30 +412,55 @@ select {
   }
 }
 
+.main {
+  padding-top: 60px; /* Espacio para el header fijo */
+}
+
+main{
+  padding-top: 80px; /* Espacio para el header fijo */
+}
+
 /* Pantallas pequeñas (celulares) */
 @media screen and (max-width: 599px) {
   .header {
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
-    gap: 0.5rem;
-    padding: 1rem;
+    gap: 0.3rem;
+    padding: 0.5rem 1rem;
     text-align: center;
   }
 
   .header-top {
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
+    justify-content: center;
+    gap: 0.5rem;
   }
 
-  .titulo-app {
-    font-size: 1.1rem;
+  .logo {
+    height: 30px;
+  }
+
+  .header h1 {
+    font-size: 0.9rem;
+    margin: 0;
   }
 
   .navbar {
-    flex-direction: column;
+    flex-direction: row;         /* ✅ cambia de columna a fila */
+    flex-wrap: wrap;
+    justify-content: center;
     gap: 0.5rem;
-    width: 100%;
+    margin: 0;
+    padding: 0.2rem 0;
   }
+
+  .navbar a {
+    font-size: 0.9rem;
+    padding: 0.2rem 0.5rem;
+    height: 100px;
+  }
+  
 
   input,
   select {
@@ -443,11 +468,26 @@ select {
     max-width: 100%;
     margin: 0.5rem auto;
     display: block;
+    
+  }
+  .main {
+    padding-top: 50px;
   }
 
   .tarjeta {
     width: 90%;
     margin: 1rem auto;
+  }
+
+  .detalle-contenedor {
+    width: 70%;
+    max-width: none;
+    padding: 1rem;
+    
+  }
+
+  main{
+    padding-top: 60px; /* Espacio para el header fijo */
   }
 }
 
